<resources>
    <string name="app_name">Todo List</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="hint_new_item_title">Title</string>
    <string name="hint_new_item_body">Body</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="sign_in">Sign In</string>
    <string name="not_registered">Don\'t have an account?</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="hint_password_verify">Verify password</string>
    <string name="already_registered">Already a member?</string>
</resources>
